# django-schemaform

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  CONTRIBUTING.md  LICENSE.md  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/instructions/: python-tests.instructions.md
.github/workflows/: ci.yml  publish.yml
demo/: README.md  pyproject.toml
demo/demo_project/: asgi.py  settings.py  urls.py  wsgi.py
demo/showcase/: forms.py  schema.py  urls.py  views.py
demo/showcase/templates/showcase/: base.html  form.html  index.html  success.html
src/schemaform/: __init__.py  forms.py  types.py
src/schemaform/tests/: conftest.py  test_forms.py  test_types.py
