[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2,<6.0",
    "django-crispy-forms>=2.0",
    "crispy-bootstrap5>=2024.2",
    "django-schemaform",
]

[tool.uv.sources]
django-schemaform = { path = "..", editable = true }
